--- a/LeBi/.classpath
+++ b/LeBi/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFx11"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/mySqlConnector"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/MySql"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
